Odstraněny mappery z MatchController a doplněná fce pro zobrazení pouze 2 zápasu - STANDARD, kdy se inactivity nezobrazí následující 2 (třeba za měsíc)